--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+
+    "ConnectionString": "mongodb://127.0.0.1:27017/",
+    "DatabaseName": "Odyssey"
+
+  }
 }
