dodat model i servis za korisnike, sa osnovnim operacijama #5

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -9,7 +9,8 @@
   "DatabaseSettings": {
 
     "ConnectionString": "mongodb://127.0.0.1:27017/",
-    "DatabaseName": "Odyssey"
+    "DatabaseName": "Odyssey",
+    "UserCollectionName": "users"
 
   }
 }
