Napravljen servis za generisanje jwt tokena. Omoguceno koriscenje autentikacija.

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -1,16 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "AppSettings": {
+        "JwtToken": "PjrVqQJ1P2VOkuWLw7NaZUluT4z7bkau"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "DatabaseSettings": {
+
+        "ConnectionString": "mongodb://127.0.0.1:27017/",
+        "DatabaseName": "Odyssey",
+        "UserCollectionName": "users"
+
     }
-  },
-  "AllowedHosts": "*",
-  "DatabaseSettings": {
-
-    "ConnectionString": "mongodb://127.0.0.1:27017/",
-    "DatabaseName": "Odyssey",
-    "UserCollectionName": "users"
-
-  }
 }
