Registration with email verification (unfinished)

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -1,7 +1,8 @@
 {
-    "AppSettings": {
-        "JwtToken": "PjrVqQJ1P2VOkuWLw7NaZUluT4z7bkau"
-    },
+  "AppSettings": {
+    "JwtToken": "PjrVqQJ1P2VOkuWLw7NaZUluT4z7bkau",
+    "EmailToken": "e8X8c0lm9KS7itWi3wgE6BiPXR21WPvO"
+  },
 
     "Logging": {
         "LogLevel": {
@@ -10,11 +11,16 @@
         }
     },
     "AllowedHosts": "*",
-    "DatabaseSettings": {
+  "DatabaseSettings": {
 
-        "ConnectionString": "mongodb://127.0.0.1:27017/",
-        "DatabaseName": "Odyssey",
-        "UserCollectionName": "users"
+    "ConnectionString": "mongodb://127.0.0.1:27017/",
+    "DatabaseName": "Odyssey",
+    "UserCollectionName": "users"
 
-    }
+  },
+  "EmailCfg": {
+    "Email": "oddyssey.brzodolokacije@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Password": "msbs#556"
+  }
 }
