--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -16,8 +16,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.ActivityLoginRegister"
-        />
+            android:name=".NavigationActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".Activities.ActivityLoginRegister" />
+        <activity android:name=".Activities.NavigationActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
