--- a/Backend/Api/Api/Api.csproj
+++ b/Backend/Api/Api/Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.24.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+	<PackageReference Include="MailKit" Version="3.4.2" />
   </ItemGroup>
 
 </Project>
