--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -15,18 +15,8 @@
         android:theme="@style/Theme.BrzoDoLokacije"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-
-            android:name=".NavigationActivity">
-    </activity>
-    <activity android:name=".ActivityForgottenPassword">
-
-            <!--<meta-data
-                android:name="android.app.lib_name"
-                android:value="" />-->
-        </activity>
+        <activity android:name=".Activities.ActivityForgottenPassword"/>
         <activity android:name=".Activities.ActivityLoginRegister" />
-
         <activity android:name=".Activities.NavigationActivity"/>
 
         <activity
