--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -18,9 +18,9 @@
     "UserCollectionName": "users"
 
   },
-  "EmailCfg": {
-    "Email": "oddyssey.brzodolokacije@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Password": "msbs#556"
-  }
+    "EmailCfg": {
+        "Email": "oddyssey.brzodolokacije@gmail.com",
+        "SmtpServer": "smtp.gmail.com",
+        "Password": "nrokhfcwahfbqnpp" //msbs#556
+    }
 }
