Back verification pages,pass reset, code cleanup

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -18,9 +18,13 @@
     "UserCollectionName": "users"
 
   },
-    "EmailCfg": {
-        "Email": "oddyssey.brzodolokacije@gmail.com",
-        "SmtpServer": "smtp.gmail.com",
-        "Password": "nrokhfcwahfbqnpp" //msbs#556
-    }
+  "EmailCfg": {
+    "Email": "oddyssey.brzodolokacije@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Password": "nrokhfcwahfbqnpp" //msbs#556
+  },
+  "URLs": {
+    "localhost": "http://localhost:5279/",
+    "actual":"add url when back put onto server"
+  }
 }
