Napravljeni kosturi za PostController i PostServices. Dodata nova kolekcija u bazi.

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -15,7 +15,8 @@
 
     "ConnectionString": "mongodb://127.0.0.1:27017/",
     "DatabaseName": "Odyssey",
-    "UserCollectionName": "users"
+    "UserCollectionName": "users",
+    "PostCollectionName": "posts"
 
   },
   "EmailCfg": {
