--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -11,14 +11,15 @@
         }
     },
     "AllowedHosts": "*",
-  "DatabaseSettings": {
+    "DatabaseSettings": {
 
-    "ConnectionString": "mongodb://127.0.0.1:27017/",
-    "DatabaseName": "Odyssey",
-    "UserCollectionName": "users",
-    "PostCollectionName": "posts"
+        "ConnectionString": "mongodb://127.0.0.1:27017/",
+        "DatabaseName": "Odyssey",
+        "UserCollectionName": "users",
+        "PostCollectionName": "posts",
+        "FileCollectionName": "files"
 
-  },
+    },
   "EmailCfg": {
     "Email": "oddyssey.brzodolokacije@gmail.com",
     "SmtpServer": "smtp.gmail.com",
