Dodata kolekcija za lokacije. Napravljen kontroler i servis za lokacije. Todo(google maps api).

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -17,7 +17,8 @@
         "DatabaseName": "Odyssey",
         "UserCollectionName": "users",
         "PostCollectionName": "posts",
-        "FileCollectionName": "files"
+        "FileCollectionName": "files",
+        "LocationCollectionname": "locations"
 
     },
   "EmailCfg": {
