--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "AppSettings": {
-    "JwtToken": "PjrVqQJ1P2VOkuWLw7NaZUluT4z7bkau",
-    "EmailToken": "e8X8c0lm9KS7itWi3wgE6BiPXR21WPvO"
-  },
+    "AppSettings": {
+        "JwtToken": "PjrVqQJ1P2VOkuWLw7NaZUluT4z7bkau",
+        "EmailToken": "e8X8c0lm9KS7itWi3wgE6BiPXR21WPvO",
+        "MapQuestApiKey": "47oeviBUoCI2JxWzNARmCtrH9fDp5Mtk" //msbs#556ASDFGGSGSD
+    },
 
     "Logging": {
         "LogLevel": {
@@ -21,11 +22,11 @@
         "LocationCollectionname": "locations"
 
     },
-  "EmailCfg": {
-    "Email": "oddyssey.brzodolokacije@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Password": "nrokhfcwahfbqnpp" //msbs#556
-  },
+    "EmailCfg": {
+        "Email": "oddyssey.brzodolokacije@gmail.com",
+        "SmtpServer": "smtp.gmail.com",
+        "Password": "nrokhfcwahfbqnpp" //msbs#556
+    },
   "URLs": {
     "localhost": "http://localhost:5279/",
     "actual":"add url when back put onto server"
