--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ActivitySinglePost"
+            android:name=".Activities.ActivitySinglePost"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -49,7 +49,14 @@
         <activity android:name=".Activities.ActivityForgottenPasswordVerify" />
         <activity android:name=".Activities.ActivityForgottenPassword" />
         <activity android:name=".Activities.ActivityLoginRegister" />
-        <activity android:name=".Activities.NavigationActivity" />
+        <activity
+            android:name=".Activities.NavigationActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false">
