--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:theme="@style/Theme.BrzoDoLokacije"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity android:name=".Activities.ActivitySinglePost"/>
 
         <activity
             android:name=".Activities.ActivityAddPost"
