--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!--DOZVOLE-->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -9,6 +10,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <!--SVOJSTVA-->
+
+    <uses-feature android:name="android.hardware.camera" android:required="false"></uses-feature>
+    
+    <!--AKTIVNOSTI-->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,8 +26,14 @@
         android:theme="@style/Theme.BrzoDoLokacije"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity android:name=".Activities.ActivitySinglePost"/>
-
+        <activity
+            android:name=".Activities.ActivityCapturePost"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".Activities.ActivitySinglePost" />
         <activity
             android:name=".Activities.ActivityAddPost"
             android:exported="false">
@@ -45,10 +57,7 @@
         <activity android:name=".Activities.ActivityForgottenPasswordVerify" />
         <activity android:name=".Activities.ActivityForgottenPassword" />
         <activity android:name=".Activities.ActivityLoginRegister" />
-        <activity
-            android:name=".Activities.NavigationActivity"/>
-
-
+        <activity android:name=".Activities.NavigationActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="false">
@@ -56,6 +65,16 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        
+        <provider
+            android:authorities="com.example.android.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
