Sifra se cuva kao hash.

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -4,7 +4,7 @@
         "EmailToken": "e8X8c0lm9KS7itWi3wgE6BiPXR21WPvO",
         "MapQuestApiKey": "47oeviBUoCI2JxWzNARmCtrH9fDp5Mtk", //msbs#556ASDFGGSGSD
         "AppName": "app-debug.apk",
-        "AppPassword": "jabukakruska123"
+        "AppPassword": "$2a$10$fq/JWx7ZZ8wVAgwwrS6O9OMtkD7QsAil7ugjE6c0mM1RTTU92bZ/C"
     },
 
     "Logging": {
