Dodat depencenci za osmdroid, dodate permisije. Omogucen prikaz mape u Fragment-u Browse.

--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
     <uses-permission
         android:name="android.permission.CAMERA"
         android:required="true"
-        android:requiredFeature="true" /> <!-- SVOJSTVA -->
+        android:requiredFeature="true" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
+
+    <!-- SVOJSTVA -->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
