Dodat novi maven repozitorijum. Dodat dependenci za osmbonuspack. Dodat GeocoderHelper. Omogucen upit za lokaciju po imenu. TODO(Search bar).

--- a/Client/BrzoDoLokacije/app/build.gradle
+++ b/Client/BrzoDoLokacije/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
 
     //OSMDROID
     implementation 'org.osmdroid:osmdroid-android:6.1.14'
+    implementation 'com.github.MKergall:osmbonuspack:6.9.0'
 }
