--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -40,37 +40,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="YOUR_API_KEY" />
 
-        <activity
-            android:name=".Activities.MapsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_maps" />
-        <activity
-            android:name=".Activities.ActivityCapturePost"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity android:name=".Activities.ActivitySinglePost" />
-        <activity android:name=".Activities.ActivityAddPost" />
+        <activity android:name=".Activities.MapsActivity"   android:screenOrientation="portrait" />
+        <activity android:name=".Activities.ActivityCapturePost" android:screenOrientation="portrait" />
+        <activity android:name=".Activities.ActivitySinglePost" android:screenOrientation="portrait" />
+        <activity android:name=".Activities.ActivityAddPost" android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.SplashPage"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -81,17 +62,12 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".Activities.ActivityForgottenPasswordVerify" />
-        <activity android:name=".Activities.ActivityForgottenPassword" />
-        <activity android:name=".Activities.ActivityLoginRegister" />
-        <activity android:name=".Activities.NavigationActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+        <activity android:name=".Activities.ActivityForgottenPasswordVerify"   android:screenOrientation="portrait" />
+        <activity android:name=".Activities.ActivityForgottenPassword"   android:screenOrientation="portrait" />
+        <activity android:name=".Activities.ActivityLoginRegister"   android:screenOrientation="portrait" />
+        <activity android:name=".Activities.NavigationActivity"   android:screenOrientation="portrait" />
+        <activity android:name=".MainActivity" android:screenOrientation="portrait" />
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
