Dodati modeli za message, napravljen message service. Napravljen ChatHub(SignalR) servis, omoguceno cuvanje sesija clienata pri konekciji.

--- a/Backend/Api/Api/appsettings.json
+++ b/Backend/Api/Api/appsettings.json
@@ -21,7 +21,8 @@
         "UserCollectionName": "users",
         "PostCollectionName": "posts",
         "FileCollectionName": "files",
-        "LocationCollectionname": "locations"
+        "LocationCollectionname": "locations",
+        "MessageCollectionname": "messages"
 
     },
     "EmailCfg": {
