--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools" >
     <!-- DOZVOLE -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,9 +14,7 @@
         android:name="android.permission.CAMERA"
         android:required="true"
         android:requiredFeature="true" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
-
-    <!-- SVOJSTVA -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- SVOJSTVA -->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -38,16 +35,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrzoDoLokacije"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="YOUR_API_KEY" />
 
-        <activity android:name=".Activities.MapsActivity"   android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ActivityCapturePost" android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ActivitySinglePost" android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ActivityAddPost" android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.MapsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.ActivityCapturePost"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.ActivitySinglePost"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.ActivityAddPost"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.SplashPage"
             android:exported="true"
@@ -62,18 +74,27 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".Activities.ActivityForgottenPasswordVerify"   android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ActivityForgottenPassword"   android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ActivityLoginRegister"   android:screenOrientation="portrait" />
-        <activity android:name=".Activities.NavigationActivity"   android:screenOrientation="portrait" />
-        <activity android:name=".MainActivity" android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".Activities.ActivityForgottenPasswordVerify"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.ActivityForgottenPassword"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.ActivityLoginRegister"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.NavigationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
