Prepravljen activitySinglePost. Povezan prikaz komentara. Povezan prikaz opisa.

--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -91,6 +91,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.ActivitySinglePost"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.ActivityAddPost"
