--- a/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
+++ b/Client/BrzoDoLokacije/app/src/main/AndroidManifest.xml
@@ -92,7 +92,8 @@
 
         <activity
             android:name=".Activities.MapsActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
         <activity
             android:name=".Activities.ActivityCapturePost"
             android:screenOrientation="portrait" />
@@ -128,7 +129,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.NavigationActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
